# auto

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/assets/: models.py  routes.py  schemas.py  service.py
src/classification/: models.py  routes.py  schemas.py  service.py
src/db/: database.py
src/location/: models.py  routes.py  schemas.py  service.py
src/migrations/: env.py
src/migrations/versions/: 1d879f30c0f0_init.py  973b14710fe0_init.py  b226379f5d07_init.py
src/organization/: models.py  routes.py  schemas.py  service.py
src/platform/: models.py  routes.py  schemas.py  service.py
src/specialization/: models.py  routes.py  schemas.py  service.py
